# nurix-takehome

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  schema.sql
.claude/: settings.json
.claude/agent-memory/b2b-ui-ux-advisor/: MEMORY.md  feedback_audit_theme_direction.md
.claude/agent-memory/conversational-ai-researcher/: MEMORY.md  project_nurix_takehome.md  reference_production_sources.md
.claude/agent-memory/interface-architect/: MEMORY.md  feedback_response_style.md  project_nurix_takehome.md
.claude/agent-memory/interviewer-lens-reviewer/: MEMORY.md  project_recurring_weak_spots.md  project_v2_frozen.md  user_candidate.md
.claude/agent-memory/scenario-visualizer/: MEMORY.md  feedback_output_style.md  project_gaps_strawman_v1.md  project_nurix_takehome.md  project_strawman_v1.md
.claude/agent-memory/senior-code-reviewer/: MEMORY.md  feedback_top3_rejects.md  project_audit_transaction.md  project_ruff_gaps.md  user_role.md
.claude/agents/: b2b-ui-ux-advisor.md  conversational-ai-researcher.md  interface-architect.md  interviewer-lens-reviewer.md  scenario-visualizer.md  senior-code-reviewer.md
.claude/hooks/: check-docs-reminder.sh
.claude/skills/architecture-overview/: SKILL.md
.claude/skills/audit-view-theme/: SKILL.md
.claude/skills/backend-conventions/: SKILL.md
.claude/skills/code-quality/: SKILL.md
.claude/skills/update-docs/: SKILL.md
app/: config.py  deps.py  main.py
app/api/: webhooks_ingest.py
app/api/routers/: audit.py  calls.py  campaigns.py  debug.py  webhooks.py
app/api/schemas/: audit.py  campaigns.py  webhook.py
app/audit/: emitter.py  events.py  reader.py
app/persistence/: pools.py  repositories.py
app/provider/: base.py  mock.py  types.py
app/scheduler/: __init__.py  business_hours.py  loop.py  reclaim.py  tick.py  wake.py  webhook_processor.py
app/state/: campaign_terminal.py  machine.py  retry_apply.py  retry_classification.py  types.py
frontend/: app.js  audit.js  campaigns.js  formatters.js  index.html  styles.css
scripts/: demo_seed_fairness.py  demo_seed_reclaim.py  demo_seed_reset.py  wait-for-health.sh
tests/e2e/: test_full_stack.py
tests/integration/: test_api_audit.py  test_api_calls.py  test_api_campaigns.py  test_api_debug.py  test_api_webhook.py  test_audit_db.py  test_lifespan.py  test_persistence_db.py  test_reclaim_and_webhook.py  test_scheduler.py  test_state_machine_db.py
tests/unit/: test_audit.py  test_business_hours.py  test_persistence.py  test_provider_mock.py  test_reclaim.py  test_scheduler_tick.py  test_state_machine.py  test_webhook_processor.py
