[project]
name = "nurix-voice-campaign"
version = "0.1.0"
description = "Outbound voice campaign microservice — Nurix Principal Engineer take-home"
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".venv",
    "venv",
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".ruff_cache",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "ASYNC",  # flake8-async (critical for this project)
    "DTZ",    # flake8-datetimez — bans naive datetime.now(); guards per-campaign business-hour correctness
    "SIM",    # flake8-simplify — low-noise readability cleanups
    "PT",     # flake8-pytest-style — consistent test fixtures / parametrize
    "PLR2004", # pylint — bans magic number literals (use named constants)
    "S",      # flake8-bandit — security: S608 SQL injection via f-string, S311 insecure random, etc.
    "RUF",    # Ruff-specific rules
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "S101", "S106", "PLR2004"]  # allow non-snake-case test methods, `assert`, test passwords, magic numbers in parametrize
"app/provider/types.py" = ["N818"]  # ProviderRejected / ProviderUnavailable names are design-locked in CLAUDE.md

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*", "testcontainers.*", "phonenumbers", "phonenumbers.*"]
ignore_missing_imports = true
